# JustParry

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/: pull_request_template.md
assets/shaders/button/: button.fs  fs.glsl  vs.glsl
assets/shaders/debug/: fs.glsl  vs.glsl
assets/shaders/floor/: fs.glsl
assets/shaders/font/: fs.glsl  vs.glsl
assets/shaders/hitboxes/: fs.glsl  vs.glsl
assets/shaders/menu/: fs.glsl  vs.glsl
assets/shaders/particle/: fs.glsl  vs.glsl
assets/shaders/player1/: fs.glsl
assets/shaders/player2/: fs.glsl  vs.glsl
assets/shaders/red_rectangle/: fs.glsl
assets/shaders/simple_button/: fs.glsl  vs.glsl
config/: controls.txt
docs/: bug-report.xlsx  test-plan.docx
shaders/: button.vs
shaders/floor/: vs.glsl
shaders/player1/: fs.glsl  vs.glsl
shaders/player2/: fs.glsl  vs.glsl
shaders/rectangle/: vs.glsl
shaders/triangle/: fs.glsl  vs.glsl
src/: bot.cpp  bot.hpp  common.cpp  common.hpp  common.md  constants.hpp  constants.md  default_config.hpp  linearinterp.cpp  linearinterp.hpp  main.cpp  main.md  mesh.cpp  mesh.hpp  physics_system.hpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/bot/: bot.cpp  bot.hpp
src/ecs/: components.cpp  components.hpp  ecs.cpp  ecs.hpp  ecs_registry.cpp  ecs_registry.hpp
src/fighters/: fighters.cpp  fighters.hpp
src/fps/: fps.cpp  fps.hpp
src/graphics/: mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/input_system/: actions.hpp  command.hpp  controller_handler.hpp  controller_mapping.hpp  input_handler.hpp  input_handler.md  input_mapping.hpp  input_utils.hpp  state_machine.cpp  state_machine.hpp  utility_inputs.hpp
src/interp/: linearinterp.cpp  linearinterp.hpp
src/particle_system/: blood_system.cpp  blood_system.hpp  particle_system.cpp  particle_system.hpp  smoke_system.cpp  smoke_system.hpp  sparkle_system.cpp  sparkle_system.hpp
src/physics/: physics_system.cpp  physics_system.hpp
src/settings/: default_config.hpp  settings.cpp  settings.hpp
src/state/: game.cpp  game.hpp  settings_menu.cpp  settings_menu.hpp
src/world/: world_init.cpp  world_init.hpp  world_init.md  world_system.cpp  world_system.hpp  world_system.md
